# cadir

./: .gitignore  CMakeLists.txt  README.md  buildNumber.cpp.in  buildNumber.hpp  buildNumber.sh  compress.hpp  config.h.in  exitCodeEnum.hpp  fileSystem.hpp  main.cpp
Exceptions/: CadirException.h  CleaningFailedException.h  CopyFromCacheException.h  CopyToCacheFailedException.h  CreateCacheDirectoryException.h  FileHandlingException.h  FinalizeCommandException.h  GzipWriteReadException.h  LinkFromCacheException.h  SetupCommandException.h
